[workspace]
members = ["bencher", "fuzz/*", "harness", "test-programs/*"]
resolver = "2"

[workspace.package]
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/buffalojoec/mollusk"
readme = "README.md"
license = "MIT"
edition = "2021"
version = "0.0.6"

[workspace.dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
mollusk-svm = { path = "harness", version = "0.0.6" }
mollusk-svm-bencher = { path = "bencher", version = "0.0.6" }
mollusk-svm-fuzz-fixture = { path = "fuzz/fixture", version = "0.0.6" }
num-format = "0.4.4"
prost = "0.10"
prost-build = "0.10"
prost-types = "0.10"
serde = "1.0.203"
serde_json = "1.0.117"
solana-bpf-loader-program = { git = "https://github.com/VintaraTrading/jito-solana.git", rev = "29a5c29f8f401a919759201b877ffc1e75cd54ac" }
solana-compute-budget = { git = "https://github.com/VintaraTrading/jito-solana.git", rev = "29a5c29f8f401a919759201b877ffc1e75cd54ac" }
solana-logger = { git = "https://github.com/VintaraTrading/jito-solana.git", rev = "29a5c29f8f401a919759201b877ffc1e75cd54ac" }
solana-program = { git = "https://github.com/VintaraTrading/jito-solana.git", rev = "29a5c29f8f401a919759201b877ffc1e75cd54ac" }
solana-program-runtime = { git = "https://github.com/VintaraTrading/jito-solana.git", rev = "29a5c29f8f401a919759201b877ffc1e75cd54ac" }
solana-system-program = { git = "https://github.com/VintaraTrading/jito-solana.git", rev = "29a5c29f8f401a919759201b877ffc1e75cd54ac" }
solana-sdk = { git = "https://github.com/VintaraTrading/jito-solana.git", rev = "29a5c29f8f401a919759201b877ffc1e75cd54ac" }
thiserror = "1.0.64"
